Feat: Hoàn thiện promotion